# Fullstack-Mart-app

Backend/product_service/: pyproject.toml
Backend/product_service/backend/: main.py
Backend/user-service/: dockerfile  pyproject.toml
Backend/user-service/app/: main.py
Backend/user-service/app/models/: user_models.py
Frontend/: compose.yml  dockerfile.frontend  package-lock.json  package.json
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/Products/: page.tsx
Frontend/app/about/: About.tsx
Frontend/app/components/: Banners.tsx  Footer.tsx  HeroImages.tsx  LandingPage.tsx  Navbar.tsx  Prodcut_section.tsx  ShopAir.tsx  ShopByCategory.tsx  socialmedia_section.tsx
Frontend/app/constants/: index.ts
