[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Muhammad Hamid <61172566+hamidkhans651@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
