[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Muhammad Hamid <61172566+hamidkhans651@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
package-name = {extras = ["extra1", "extra2"], version = "^0.1"}
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
oauthlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
